--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiofiles==23.1.0
 aiogram==3.0.0b7
 aiohttp==3.8.4
 aiosignal==1.3.1
+aiocsv==1.3.2
 async-timeout==4.0.2
 asyncpg==0.27.0
 attrs==23.1.0
